--- a/Section03/L33-watch-mode/index.html
+++ b/Section03/L33-watch-mode/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document222</title>
     <script src="app.js"></script>
+    <script src="analytics.js"></script>
 </head>
 <body>
     
